# github-app-versions

./: Cargo.toml  Dockerfile  build.rs
.github/workflows/: release.yaml
JavaScript/: app.js  app.js.map  dialog.js  dialog.js.map  html.js  html.js.map
TypeScript/: app.ts  dialog.ts  html.ts  types.d.ts
src/: main.rs  settings.rs
src/app/: app_ctx.rs  cached_data.rs  mod.rs
src/background/: data_scanner_timer.rs  mod.rs
src/db/: app_version_variables_repo.rs  db_inner.rs  dto.rs  git_hub_versions.rs  mod.rs  tags_versions_repo.rs
src/flows/: get_released_versions.rs  mod.rs  set_version_to_release.rs
src/github/: get_last_release.rs  list_of_repos.rs  mod.rs
src/http_server/: mod.rs  start_up.rs
src/http_server/controllers/: builder.rs  mod.rs
src/http_server/controllers/apps/: bulk_insert_apps.rs  insert_app.rs  mod.rs  rename_service.rs
src/http_server/controllers/git_hub/: get_versions_action.rs  mod.rs
src/http_server/controllers/releases/: get_github_releases.rs  get_github_version.rs  get_releases.rs  get_to_release_versions_yaml.rs  mod.rs  set_version_to_release_action.rs
src/http_server/controllers/version_tags/: bulk_set_to_release_versions.rs  delete_to_release_version_action.rs  get_to_release_versions_settings.rs  get_to_release_versions_yaml.rs  mod.rs  set_to_release_version_action.rs
src/scripts/: get_to_release_versions.rs  mod.rs
wwwroot/: index.html
wwwroot/css/: app.css
wwwroot/js/: app.js
